; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_enable_kx.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_enable_kx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tty_out = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"\1B=\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"\1B>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_kx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_kx(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @tty_out, align 4
  %5 = call i64 @isatty(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = icmp ne i32 %8, 0
  %10 = zext i1 %9 to i64
  %11 = select i1 %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0)
  store i8* %11, i8** %3, align 8
  %12 = load i32, i32* @tty_out, align 4
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = call i32 @write(i32 %12, i8* %13, i32 %15)
  br label %17

17:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @isatty(i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
